<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context="activities.ChatActivity">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_500"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/chat_img_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/chat_user_name_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chat_img_profile"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:padding="5dp"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/r1"
        android:layout_below="@id/l1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_background"
                android:hint="@string/send_message"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/btnSendMessage"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/btn_background"
                android:src="@drawable/ic_send"
                android:text="@string/sign_in" />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>